Public/css/style.css
/* Base Variables */
:root {
  --accent-color: #ED2207;
  --accent-color-darkened: #BC1802;
  --border-color: #000000;
  --background-color: #FFFFFF;
  --semi-opaque-background: rgba(255, 255, 255, 0.6);
  --text-color: #000000;
}

html {
  background-color: var(--background-color);
}

/* Site Styles */
body {
  font-family: Poppins, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif !important;
  font-weight: 400;
  width: 100%;
  overflow-x: hidden;
  background-color: var(--background-color);
  color: var(--text-color);
}

.child-img {
  height: 90%;
  position: absolute;
  top: 4em;
  left: 50%;
  margin: -25px 0 0 -95px;
  z-index: -1;
}

.row {
    padding-top: 40px;
}

.col-lg-10 {
    padding-right: 40px;
    padding-left: 40px;
}

th, td {
  text-align: left;
}

/* Sponsors */

.sponsors-table {
    border-collapse: unset;
    vertical-align: middle;
    text-align: center;
}

.sponsor-img {
    max-width: 100%;
    height: auto;
}

/* Order Tickets */

.order-tickets {
    height: 74%;
    position: absolute;
    top: 4em;
    left: 58%;
    margin: 840px 0 0 -340px;
    z-index: -1;
}

.tito-iframe {
    width: auto !important;
}

/* What We Are About Section */

.what-about-icon {
  margin-left: -20%;
  height: 80%;
  width: 85%;
}

/* Previous Conference Section */

.previous-conference-image {
  object-fit: cover;
  width: 190px;
  height: 265px;
}

.previous-conference-icon {
  margin-left: -40%;
  height: 50%;
  width: 75%;
}

.previous-conference-image-half {
  object-fit: cover;
  width: 50%;
}

.conference-image-top-offset {
  margin-top: 50px;
}

.conference-image-bottom-offset {
  margin-top: -20px;
}

.bordered {
  border: 1px solid var(--border-color);
}

@media only screen and (max-width: 989px) {
    .previous-conference-image,
    .pc-image-md {
        object-fit: cover;
        width: 100%;
        height: 100%;
        margin: 0 0 0 0 !important;
    }

    .order-tickets,
    .what-about-icon,
    .previous-conference-icon,
    .pc-icon-md {
        display: none;
    }

    .ci-md {
        margin: 0 0 0 0 !important;
    }
}

strong {
  font-weight: bold;
}

h1 {
  line-height: 1.2em;
  margin-top: 0.5em;
  padding: 0.5em 0;
  text-transform: uppercase;
  font-weight: 200 !important;
}

h2 {
  font-size: 2em;
  line-height: 100%;
  text-transform: uppercase;
  font-weight: 200 !important;
}

p.bold {
    font-weight: bold;
}

ul li {
  list-style-type: none;
}

a {
  color: var(--accent-color);
}

.nav-arrow {
  float: right;
  text-decoration: none;
}

.logo {
  width: 10em;
  float: left;
}

/* Header */
.separator {
  width: 0;
  height: 40px;
  border: 0.5px solid var(--border-color);
  margin:  0 1em;
  display: block;
  float: left;
}

.btn-outline-success:hover {
  color: #fff;
  background-color: rgba(255, 126, 7, 1);
  border-color: rgba(255, 126, 7, 1);
}

.btn-outline-success {
  color: rgba(255, 126, 7, 1);
  border-color: rgba(255, 126, 7, 1);
}

.event-date {
  float: left;
  line-height:  120%;
  text-transform: uppercase;
}

/* Footer */
footer a {
  color: var(--text-color);
  text-decoration: none;
}

/* Top Navigation */
.top-nav {
  background-color: var(--semi-opaque-background);
  border-top:  1px var(--border-color) solid;
  box-shadow: 0px 4px 21px rgba(255, 126, 7, 0.5);
  float: right;
  font-size:  16px;
  padding: 0.5em 2em;
}

.navbar-expand-lg {
    padding-right: 30px;
}

.navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 20px;
}

ul.top-nav li {
  float: left;
  font-weight: 500;
  list-style-type: none;
  padding: 0 1em;
  text-transform: uppercase;
}

ul.top-nav li a {
  color: var(--text-color);
  text-decoration: none;
  vertical-align: baseline;
}

.top-nav img {
    margin-top: 10px;
}

/* Coming Soon Page */
.container > img {
  margin-left: auto;
  margin-right: auto;
}

/* Home page */
.row h2 {
  padding-left: 0;
}

ul.tickets {
  padding-left: 40;
}

ul.tickets li {
  background: #000;
  color: #fff;
  float: left;
  font-weight: bold;
  list-style-type: none;
  padding: 1em 1em;
  position: relative;
  text-transform: uppercase;
}

ul.tickets li.inPerson {
  background: var(--accent-color);
}

ul.tickets li.remote {
  background: var(--accent-color-darkened);
}

ul.tickets li a {
  color: #fff;
}

.get-in-touch {
  float: right;
  line-height: 1.2em;
  text-align: right;
  text-decoration: none;
  text-transform: uppercase;
}

.tag {
  background: #000;
  border-radius: 4px;
  color: #fff;
  padding: 4px;
  text-transform: uppercase;
  font-size: 0.7em;
}

/* Speaker Grid */
.speaker-grid-container {
  width: 100%;
  border: 1px solid var(--border-color);
  padding: 80px 0px 80px 0px;
}

.speaker-grid {
  position: relative;
  display: grid;
  width: 100%;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-auto-rows: max-content;
  grid-gap: 20px;
  grid-row-gap: 20px;
  padding-top: 80px;
}

.speaker-grid-container-background {
  position: absolute;
  content: "";
  margin-left: calc(((100%/5)*-1)/2); /* About 20% extra width */
  width: 120%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0);
  border: 1px var(--border-color) solid;
  pointer-events: none; /* Make sure we don't get in the way */
  margin-top: calc(80px + 1px) /* Border width / 2 */
}

/* Speaker grid header */
.speaker-grid-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 120px;
  padding-right: 120px;
}

.call-for-speakers {
  flex-direction: column;
  display: flex;
  justify-content: center;
}

.call-for-speakers > img {
  display: inline-block;
  align-self: flex-end;
  text-align: right;
}

.call-for-speakers > a {
  align-self: center;
  font-weight: 600;
  color: var(--accent-color); /* Explicit to disable ugly blue hover */
  font-size: 20px;
}

/* Speaker Grid elements */
.speaker-grid-element { 
  display: flex;
  flex-direction: column;
  justify-content: top;
  height: 100%;
}

.speaker-grid-element-image-container {
    width: 100%;
    height: 300px;
}

.speaker-grid-element-image {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.speaker-grid-element-info { 
  display: inline-block;
  padding-left: 20px;
  width: 100%;
}

.speaker-grid-element-info > a { 
  text-decoration: none;
  font-size: 20px;
}

.speaker-grid-social {
  float: right;
  width: 36px;
  height: 36px;
  background-color: var(--border-color);
  text-align: center;
}

.speaker-grid-social > img {
  display: inline-block;
  margin: 0 auto;
  padding: 8px;
  height: 100%;
  width: 100%;
}

.speaker-grid-element-info > p {
    margin: 0;
}

.speaker-grid-name {
    padding-top: 20px;
    font-weight: 600;
    font-size: 16px;
}

.speaker-grid-title {
    font-weight: 300;
    font-size: 14px;
}

@media only screen and (max-width: 1200px) {
  .speaker-grid-container-background {
    display: none;
  }
  .speaker-grid {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
  .speaker-grid-header {
    padding-left: 40px;
    padding-right: 40px;
  }
}

@media only screen and (max-width: 992px) {
  .speaker-grid {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

/* Responsive Grid */
@media only screen and (max-width: 768px) {
  .speaker-grid {
    grid-template-columns: 1fr 1fr;
  }
  .speaker-grid-element-image-container {
    height: 300px;
  }
  .speaker-grid-header {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media only screen and (max-width: 576px) {
  .speaker-grid-element-image-container {
    height: 55vw;
  }

  .speaker-grid-header {
    padding-left: 20px;
    padding-right: 20px;
    flex-direction: column;
    align-content: flex-start;
    justify-content: left;
  }

  .call-for-speakers {
    align-self: flex-start;
  }
  .call-for-speakers > img {
    display: none;
  }
}

